# dx-without-excel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.json  devbox.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: app.yaml
config/teams/: team_a.yaml  team_b.yaml
data/teams/: team_a.csv  team_b.csv
scripts/: check_coverage.py
src/domain/: __init__.py  calculation.py  data_format.py  team.py
src/infrastructure/: __init__.py
src/infrastructure/config/: loader.py
src/infrastructure/data/: reader.py
src/presentation/: __init__.py  app.py  team_manager.py
tests/e2e/: conftest.py  test_app.py
tests/unit/domain/: test_calculation.py  test_data_format.py  test_team.py
tests/unit/infrastructure/: test_config_loader.py  test_data_reader.py
tests/unit/integration/: test_calculation_integration.py
tests/unit/presentation/: test_team_manager.py
